[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/main_menu/update_check/update_check.gd" type="Script" id=1]
[ext_resource path="res://game/theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/Small_SemiBold.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.239216, 0.223529, 0.443137, 1 )

[sub_resource type="Animation" id=2]

[node name="UpdateShit" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -229.0
margin_right = 390.0
margin_bottom = 1.0
rect_min_size = Vector2( 100, 20 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 7.21216
margin_top = 6.37999
margin_right = 120.212
margin_bottom = 20.38
custom_fonts/font = ExtResource( 3 )
text = "Version: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckUpdate" type="Button" parent="."]
margin_left = 8.0
margin_top = 112.0
margin_right = 601.0
margin_bottom = 210.0
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Check for updates"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -861.51
margin_top = -265.98
margin_right = 865.49
margin_bottom = 258.02
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UpdateDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -585.0
margin_top = -149.0
margin_right = 585.0
margin_bottom = 149.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UpdateDialog/VBoxContainer"]
margin_right = 1170.0
margin_bottom = 182.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Your version is outdated.
Click here to go to the download page"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Update" type="Button" parent="UpdateDialog/VBoxContainer"]
margin_top = 202.0
margin_right = 1170.0
margin_bottom = 290.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Download"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade_in = SubResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="CheckUpdate" to="." method="_on_CheckUpdate_pressed"]
[connection signal="pressed" from="UpdateDialog/VBoxContainer/Update" to="." method="_on_update_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_completed"]
